# CAVEpipelines

./: .gitignore  .pre-commit-config.yaml  1.chunkedgraph.md  2.meshing.md  3.l2cache.md  ARCHITECTURE.md  README.md  RELEASING.md  codecov.yml  dataset_config.md  example-meshing.yaml  l2cache.cmds  pipeline.yml.example  pyproject.toml
.github/workflows/: ci.yml  update-rates.yml
cave_pipeline/: __init__.py  cli.py  config.py  costs.py  kube.py  manifest.py  ops.py  rates.csv  rates.py  stages.py  util.py
cave_pipeline/db/: __init__.py  state.py
cave_pipeline/distribution/: __init__.py  exit_codes.py  grid.py  lock.py
config/: .gitignore  README.md  dataset-example.yml  pipeline-example.yml
helm/: .gitignore  Chart.yaml
helm/common/: Chart.yaml
helm/common/templates/: _container.tpl  _deployment.tpl  _hpa.tpl
helm/l2cache/: Chart.yaml  example_values.yaml
helm/l2cache/charts/: common-0.1.0.tgz
helm/l2cache/templates/: NOTES.txt  deployments.yml
helm/pychunkedgraph/: Chart.yaml  example_values.yaml
helm/pychunkedgraph/templates/: NOTES.txt  deployments.yml  trackers.yml
helm/templates/: _configmap.tpl  _container.tpl  _deployment.tpl  _secret.tpl  _serviceaccount.tpl  configmaps.yml  deployments.yml  secrets.yml  serviceaccount.yml
pipeline/: __init__.py  cgcache.py  cli.py  config.py  costdb.py  costs.py  kube.py  manifest.py  ops.py  rates.csv  rates.py  stages.py  util.py
pipeline/db/: __init__.py  base.py  cost.py  models.py  state.py
pipeline/distribution/: __init__.py  harness.py  lock.py
terraform/: cluster.tf  helm_config.tf  helm_values.tpl  main.tf  outputs.tf  pools.tf  redis.tf  serviceaccount.tf  terraform.tfvars  vpc.tf
tests/: conftest.py  test_apply.py  test_cave_register.py  test_cgcache.py  test_cli.py  test_commands.py  test_config.py  test_costdb.py  test_costs.py  test_db_cost.py  test_db_state.py  test_distribution_grid.py  test_distribution_harness.py  test_distribution_lock.py  test_kube.py  test_manifest.py  test_oneshot.py  test_orchestrator.py  test_pause.py  test_run_layer.py  test_status.py  test_submit.py  test_util.py
