[project]
name = "cave-pipeline"
version = "0.1.0"
description = "Operator CLI to run PyChunkedGraph ingest / l2cache / meshing as GKE Autopilot Indexed Jobs"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "kubernetes>=29",
    "PyYAML>=6.0",
    "rich>=13",
]

[project.optional-dependencies]
dev = ["pre-commit", "pytest", "ruff"]

[project.scripts]
pipeline = "pipeline.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipeline"]

[tool.setuptools.package-data]
pipeline = ["rates.csv"]

[tool.ruff]
line-length = 90

[tool.pytest.ini_options]
testpaths = ["tests"]
